# GPUTree

./: CMakeLists.txt  Description.props  GPUTree.sln  README.md
GPUTree/: GPUTree.vcxproj  TreeNode.h  cuda_helpers.cuh  data.h  infogain.cu  infogain.cuh  kernel.cu
native/: CMakeLists.txt
native/src/: GPUTree.cu  GPUTree.cuh  cuda_helpers.cu  cuda_helpers.cuh  data.cpp  main.cu
src/: GPUTree.cu  GPUTree.cuh  TreeNode.cpp  data.cpp  data.h  jna_test.h  kernel.cu  main.cu
src/main/java/weka/classifiers/trees/: GPUTree.java
src/test/java/weka/classifiers/trees/: GPUTreeTest.java
